// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-list> Component basic usage 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <replace-with-grandchildren>
    <ul class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 1
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 2
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
            item 3
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
    </ul>
  </replace-with-grandchildren>
</bolt-list>
`;

exports[`<bolt-list> Component list custom separator color 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="solid"
           align="start"
           valign="center"
           style="--bolt-list-item-border-color: red;"
>
  <replace-with-grandchildren>
    <ul class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--separator-solid c-bolt-list--align-start c-bolt-list--valign-center">
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--separator-solid c-bolt-list-item--align-start">
            item 1
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--separator-solid c-bolt-list-item--align-start">
            item 2
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--separator-solid c-bolt-list-item--align-start c-bolt-list-item--last-item">
            item 3
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
    </ul>
  </replace-with-grandchildren>
</bolt-list>
`;

exports[`<bolt-list> Component list display: block 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <replace-with-grandchildren>
    <ul class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 1
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 2
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
            item 3
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
    </ul>
  </replace-with-grandchildren>
</bolt-list>
`;

exports[`<bolt-list> Component list display: flex 1`] = `
<bolt-list tag="ul"
           display="flex"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <replace-with-grandchildren>
    <ul class="c-bolt-list c-bolt-list--display-flex c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-flex c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 1
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-flex c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 2
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-flex c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
            item 3
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
    </ul>
  </replace-with-grandchildren>
</bolt-list>
`;

exports[`<bolt-list> Component list display: inline 1`] = `
<bolt-list tag="ul"
           display="inline"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <replace-with-grandchildren>
    <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 1
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 2
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
            item 3
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
    </ul>
  </replace-with-grandchildren>
</bolt-list>
`;

exports[`<bolt-list> Component list display: inline@medium 1`] = `
<bolt-list tag="ul"
           display="inline@medium"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <replace-with-grandchildren>
    <ul class="c-bolt-list c-bolt-list--display-inline@medium c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline@medium c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 1
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline@medium c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 2
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline@medium c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
            item 3
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
    </ul>
  </replace-with-grandchildren>
</bolt-list>
`;

exports[`<bolt-list> Component list display: inline@small 1`] = `
<bolt-list tag="ul"
           display="inline@small"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <replace-with-grandchildren>
    <ul class="c-bolt-list c-bolt-list--display-inline@small c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline@small c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 1
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline@small c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 2
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline@small c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
            item 3
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
    </ul>
  </replace-with-grandchildren>
</bolt-list>
`;

exports[`<bolt-list> Component list display: inline@xsmall 1`] = `
<bolt-list tag="ul"
           display="inline@xsmall"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <replace-with-grandchildren>
    <ul class="c-bolt-list c-bolt-list--display-inline@xsmall c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline@xsmall c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 1
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline@xsmall c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 2
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline@xsmall c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
            item 3
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
    </ul>
  </replace-with-grandchildren>
</bolt-list>
`;

exports[`<bolt-list> Component list display: inline@xxsmall 1`] = `
<bolt-list tag="ul"
           display="inline@xxsmall"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <replace-with-grandchildren>
    <ul class="c-bolt-list c-bolt-list--display-inline@xxsmall c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline@xxsmall c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 1
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline@xxsmall c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 2
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline@xxsmall c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
            item 3
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
    </ul>
  </replace-with-grandchildren>
</bolt-list>
`;

exports[`<bolt-list> Component list inset spacing: false 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <replace-with-grandchildren>
    <ul class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 1
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 2
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
            item 3
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
    </ul>
  </replace-with-grandchildren>
</bolt-list>
`;

exports[`<bolt-list> Component list inset spacing: true 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
           inset
>
  <replace-with-grandchildren>
    <ul class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center c-bolt-list--inset">
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--inset">
            item 1
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--inset">
            item 2
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item c-bolt-list-item--inset">
            item 3
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
    </ul>
  </replace-with-grandchildren>
</bolt-list>
`;

exports[`<bolt-list> Component list items horizontal alignment: center 1`] = `
<bolt-list tag="ul"
           display="inline"
           spacing="xsmall"
           separator="none"
           align="center"
           valign="center"
>
  <replace-with-grandchildren>
    <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-center c-bolt-list--valign-center">
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-center">
            item 1
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-center">
            item 2
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-center c-bolt-list-item--last-item">
            item 3
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
    </ul>
  </replace-with-grandchildren>
</bolt-list>
`;

exports[`<bolt-list> Component list items horizontal alignment: end 1`] = `
<bolt-list tag="ul"
           display="inline"
           spacing="xsmall"
           separator="none"
           align="end"
           valign="center"
>
  <replace-with-grandchildren>
    <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-end c-bolt-list--valign-center">
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-end">
            item 1
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-end">
            item 2
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-end c-bolt-list-item--last-item">
            item 3
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
    </ul>
  </replace-with-grandchildren>
</bolt-list>
`;

exports[`<bolt-list> Component list items horizontal alignment: justify 1`] = `
<bolt-list tag="ul"
           display="inline"
           spacing="xsmall"
           separator="none"
           align="justify"
           valign="center"
>
  <replace-with-grandchildren>
    <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-justify c-bolt-list--valign-center">
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-justify">
            item 1
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-justify">
            item 2
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-justify c-bolt-list-item--last-item">
            item 3
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
    </ul>
  </replace-with-grandchildren>
</bolt-list>
`;

exports[`<bolt-list> Component list items horizontal alignment: start 1`] = `
<bolt-list tag="ul"
           display="inline"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <replace-with-grandchildren>
    <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 1
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 2
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
            item 3
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
    </ul>
  </replace-with-grandchildren>
</bolt-list>
`;

exports[`<bolt-list> Component list items vertical alignment: center 1`] = `
<bolt-list tag="ul"
           display="inline"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <replace-with-grandchildren>
    <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 1
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 2
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
            item 3
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
    </ul>
  </replace-with-grandchildren>
</bolt-list>
`;

exports[`<bolt-list> Component list items vertical alignment: end 1`] = `
<bolt-list tag="ul"
           display="inline"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="end"
>
  <replace-with-grandchildren>
    <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-end">
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 1
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 2
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
            item 3
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
    </ul>
  </replace-with-grandchildren>
</bolt-list>
`;

exports[`<bolt-list> Component list items vertical alignment: start 1`] = `
<bolt-list tag="ul"
           display="inline"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="start"
>
  <replace-with-grandchildren>
    <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-start">
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 1
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 2
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
            item 3
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
    </ul>
  </replace-with-grandchildren>
</bolt-list>
`;

exports[`<bolt-list> Component list nowrap: false 1`] = `
<bolt-list tag="ul"
           display="inline"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <replace-with-grandchildren>
    <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 1
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 2
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 3
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 4
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 5
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 6
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 7
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 8
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 9
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 10
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 11
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 12
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 13
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 14
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 15
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 16
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 17
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 18
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
            item 19
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
    </ul>
  </replace-with-grandchildren>
</bolt-list>
`;

exports[`<bolt-list> Component list nowrap: true 1`] = `
<bolt-list tag="ul"
           display="inline"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
           nowrap
>
  <replace-with-grandchildren>
    <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center c-bolt-list--nowrap">
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 1
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 2
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 3
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 4
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 5
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 6
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 7
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 8
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 9
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 10
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 11
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 12
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 13
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 14
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 15
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 16
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 17
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 18
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
            item 19
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
    </ul>
  </replace-with-grandchildren>
</bolt-list>
`;

exports[`<bolt-list> Component list separator: dashed 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="dashed"
           align="start"
           valign="center"
>
  <replace-with-grandchildren>
    <ul class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--separator-dashed c-bolt-list--align-start c-bolt-list--valign-center">
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--separator-dashed c-bolt-list-item--align-start">
            item 1
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--separator-dashed c-bolt-list-item--align-start">
            item 2
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--separator-dashed c-bolt-list-item--align-start c-bolt-list-item--last-item">
            item 3
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
    </ul>
  </replace-with-grandchildren>
</bolt-list>
`;

exports[`<bolt-list> Component list separator: none 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <replace-with-grandchildren>
    <ul class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 1
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 2
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
            item 3
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
    </ul>
  </replace-with-grandchildren>
</bolt-list>
`;

exports[`<bolt-list> Component list separator: solid 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="solid"
           align="start"
           valign="center"
>
  <replace-with-grandchildren>
    <ul class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--separator-solid c-bolt-list--align-start c-bolt-list--valign-center">
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--separator-solid c-bolt-list-item--align-start">
            item 1
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--separator-solid c-bolt-list-item--align-start">
            item 2
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--separator-solid c-bolt-list-item--align-start c-bolt-list-item--last-item">
            item 3
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
    </ul>
  </replace-with-grandchildren>
</bolt-list>
`;

exports[`<bolt-list> Component list spacing: large 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="large"
           separator="none"
           align="start"
           valign="center"
>
  <replace-with-grandchildren>
    <ul class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-large c-bolt-list--align-start c-bolt-list--valign-center">
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-large c-bolt-list-item--align-start">
            item 1
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-large c-bolt-list-item--align-start">
            item 2
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-large c-bolt-list-item--align-start c-bolt-list-item--last-item">
            item 3
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
    </ul>
  </replace-with-grandchildren>
</bolt-list>
`;

exports[`<bolt-list> Component list spacing: medium 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="medium"
           separator="none"
           align="start"
           valign="center"
>
  <replace-with-grandchildren>
    <ul class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-medium c-bolt-list--align-start c-bolt-list--valign-center">
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-medium c-bolt-list-item--align-start">
            item 1
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-medium c-bolt-list-item--align-start">
            item 2
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-medium c-bolt-list-item--align-start c-bolt-list-item--last-item">
            item 3
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
    </ul>
  </replace-with-grandchildren>
</bolt-list>
`;

exports[`<bolt-list> Component list spacing: none 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="none"
           separator="none"
           align="start"
           valign="center"
>
  <replace-with-grandchildren>
    <ul class="c-bolt-list c-bolt-list--display-block c-bolt-list--align-start c-bolt-list--valign-center">
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--align-start">
            item 1
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--align-start">
            item 2
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--align-start c-bolt-list-item--last-item">
            item 3
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
    </ul>
  </replace-with-grandchildren>
</bolt-list>
`;

exports[`<bolt-list> Component list spacing: small 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="small"
           separator="none"
           align="start"
           valign="center"
>
  <replace-with-grandchildren>
    <ul class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-small c-bolt-list--align-start c-bolt-list--valign-center">
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
            item 1
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
            item 2
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-small c-bolt-list-item--align-start c-bolt-list-item--last-item">
            item 3
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
    </ul>
  </replace-with-grandchildren>
</bolt-list>
`;

exports[`<bolt-list> Component list spacing: xlarge 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xlarge"
           separator="none"
           align="start"
           valign="center"
>
  <replace-with-grandchildren>
    <ul class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xlarge c-bolt-list--align-start c-bolt-list--valign-center">
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xlarge c-bolt-list-item--align-start">
            item 1
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xlarge c-bolt-list-item--align-start">
            item 2
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xlarge c-bolt-list-item--align-start c-bolt-list-item--last-item">
            item 3
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
    </ul>
  </replace-with-grandchildren>
</bolt-list>
`;

exports[`<bolt-list> Component list spacing: xsmall 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <replace-with-grandchildren>
    <ul class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 1
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 2
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
            item 3
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
    </ul>
  </replace-with-grandchildren>
</bolt-list>
`;

exports[`<bolt-list> Component list spacing: xxsmall 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xxsmall"
           separator="none"
           align="start"
           valign="center"
>
  <replace-with-grandchildren>
    <ul class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xxsmall c-bolt-list--align-start c-bolt-list--valign-center">
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xxsmall c-bolt-list-item--align-start">
            item 1
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xxsmall c-bolt-list-item--align-start">
            item 2
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xxsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
            item 3
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
    </ul>
  </replace-with-grandchildren>
</bolt-list>
`;

exports[`<bolt-list> Component list tag: div 1`] = `
<bolt-list tag="div"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <replace-with-grandchildren>
    <div class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
      <bolt-list-item>
        <replace-with-grandchildren>
          <span class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 1
          </span>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <span class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 2
          </span>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <span class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
            item 3
          </span>
        </replace-with-grandchildren>
      </bolt-list-item>
    </div>
  </replace-with-grandchildren>
</bolt-list>
`;

exports[`<bolt-list> Component list tag: ol 1`] = `
<bolt-list tag="ol"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <replace-with-grandchildren>
    <ol class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 1
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 2
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
            item 3
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
    </ol>
  </replace-with-grandchildren>
</bolt-list>
`;

exports[`<bolt-list> Component list tag: span 1`] = `
<bolt-list tag="span"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <replace-with-grandchildren>
    <span class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
      <bolt-list-item>
        <replace-with-grandchildren>
          <span class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 1
          </span>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <span class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 2
          </span>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <span class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
            item 3
          </span>
        </replace-with-grandchildren>
      </bolt-list-item>
    </span>
  </replace-with-grandchildren>
</bolt-list>
`;

exports[`<bolt-list> Component list tag: ul 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <replace-with-grandchildren>
    <ul class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 1
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            item 2
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
            item 3
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
    </ul>
  </replace-with-grandchildren>
</bolt-list>
`;
